feat: conteúdo HTML adicionado

--- a/index.html
+++ b/index.html
@@ -4,10 +4,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animais Fantásticos</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="src/css/style.css">
+
+    <!-- JS -->
+    <script defer src="src/js/script.js"></script>
 </head>
 
 <body>
+
+    <nav>
+        <ul>
+            <li><a href="#animais">Animais</a></li>
+            <li><a href="#faq">Faq</a></li>
+            <li><a href="#contato">Contato</a></li>
+            <li><a href="https://iaugusto.vercel.app/">Dev ►</a></li>
+        </ul>
+    </nav>
+
+    <section class="grid-section animais" id="animais">
+
+        <h1 class="titulo">Animais Fantásticos</h1>
+
+        <ul>
+            <li>
+                <img src="src/img/imagem1.jpg" alt="Imagem de um Quokka">
+            </li>
+            <li>
+                <img src="src/img/imagem2.jpg" alt="Imagem de uma Raposa">
+            </li>
+            <li>
+                <img src="src/img/imagem3.jpg" alt="Imagem de um Leão">
+            </li>
+            <li>
+                <img src="src/img/imagem4.jpg" alt="Imagem de um Urso">
+            </li>
+            <li>
+                <img src="src/img/imagem5.jpg" alt="Imagem de um Lobo">
+            </li>
+            <li>
+                <img src="src/img/imagem6.jpg" alt="Imagem de um tubarão">
+            </li>
+        </ul>
+
+        <div class="animais-descricao">
+            <section>
+                <h2>Raposa</h2>
+                <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                    por um focinho comprido e uma cauda longa e peluda.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
+                    qual a raposa vermelha é a mais comum.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+            </section>
+
+            <section>
+                <h2>Esquilo</h2>
+                <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                    por um focinho comprido e uma cauda longa e peluda.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
+                    qual a raposa vermelha é a mais comum.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+            </section>
+
+            <section>
+                <h2>Urso</h2>
+                <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                    por um focinho comprido e uma cauda longa e peluda.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
+                    qual a raposa vermelha é a mais comum.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+            </section>
+
+            <section>
+                <h2>Lobo</h2>
+                <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                    por um focinho comprido e uma cauda longa e peluda.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
+                    qual a raposa vermelha é a mais comum.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+            </section>
+
+            <section>
+                <h2>Macaco</h2>
+                <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                    por um focinho comprido e uma cauda longa e peluda.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
+                    qual a raposa vermelha é a mais comum.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+            </section>
+
+            <section>
+                <h2>Leão</h2>
+                <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados
+                    por um focinho comprido e uma cauda longa e peluda.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+                <p>De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do
+                    qual a raposa vermelha é a mais comum.</p>
+                <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+            </section>
+
+        </div>
+    </section>
+
+    </section>
+    <section class="grid-section faq">
+
+        <h1>Faq</h1>
+        <dl>
+
+            <dt>Qual a idade dos animais?</dt>
+            <dd>
+                As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.
+            </dd>
+
+            <dt>Eles são fantásticos?</dt>
+            <dd>
+                Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.
+            </dd>
+
+            <dt>Qual a diferença?</dt>
+            <dd>
+                As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.
+            </dd>
+
+            <dt>Como proteger?</dt>
+            <dd>
+                Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.
+            </dd>
+
+        </dl>
+    </section>
+
+    <section class="grid-section contato" id="contato">
+        <h1>Contato</h1>
+        <div class="mapa">
+            <img src="src/img/mapa.png" alt="Imagem ilustrativa de um mapa">
+        </div>
+
+        <ul class="dados">
+            <li><a href="mailto:">igoraugustobz@gmail.com</a></li>
+            <li><a href="https://iaugusto.vercel.app/" target="_blank" rel="noopener noreferrer"></a>Portfólio</li>
+            <li><a href="https://github.com/igoraugustobrz/" target="_blank" rel="noopener noreferrer"></a>GitHub</li>
+            <li><a href="https://www.linkedin.com/in/igorbrz/" target="_blank" rel="noopener noreferrer"></a>LinkedIn</li>
+            <li><a href="tel:+5511979982540">+55 (11) 97998-2540</a></li>
+            <li>São Paulo - SP</li>
+        </ul>
+
+    </section>
+
+    <footer>
+        <p>Copyrigtht © 2023 by Igor Augusto | All Rights Reserved</p>
+    </footer>
 
 </body>
 
