style: estilos adicionados ao site

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <nav>
+    <nav class="menu">
         <ul>
             <li><a href="#animais">Animais</a></li>
             <li><a href="#faq">Faq</a></li>
@@ -28,7 +28,7 @@
 
         <h1 class="titulo">Animais Fantásticos</h1>
 
-        <ul>
+        <ul class="animais-lista">
             <li>
                 <img src="src/img/imagem1.jpg" alt="Imagem de um Quokka">
             </li>
@@ -116,8 +116,8 @@
     </section>
     <section class="grid-section faq">
 
-        <h1>Faq</h1>
-        <dl>
+        <h1 class="titulo">Faq</h1>
+        <dl class="faq-lista">
 
             <dt>Qual a idade dos animais?</dt>
             <dd>
@@ -143,23 +143,23 @@
     </section>
 
     <section class="grid-section contato" id="contato">
-        <h1>Contato</h1>
+        <h1 class="titulo">Contato</h1>
         <div class="mapa">
             <img src="src/img/mapa.png" alt="Imagem ilustrativa de um mapa">
         </div>
 
         <ul class="dados">
             <li><a href="mailto:">igoraugustobz@gmail.com</a></li>
-            <li><a href="https://iaugusto.vercel.app/" target="_blank" rel="noopener noreferrer"></a>Portfólio</li>
-            <li><a href="https://github.com/igoraugustobrz/" target="_blank" rel="noopener noreferrer"></a>GitHub</li>
-            <li><a href="https://www.linkedin.com/in/igorbrz/" target="_blank" rel="noopener noreferrer"></a>LinkedIn</li>
+            <li><a href="https://iaugusto.vercel.app/" target="_blank" rel="noopener noreferrer">Portfólio</a></li>
+            <li><a href="https://github.com/igoraugustobrz/" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/igorbrz/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
             <li><a href="tel:+5511979982540">+55 (11) 97998-2540</a></li>
             <li>São Paulo - SP</li>
         </ul>
 
     </section>
 
-    <footer>
+    <footer class="copy">
         <p>Copyrigtht © 2023 by Igor Augusto | All Rights Reserved</p>
     </footer>
 
